# stonks-cli

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASING.md  make_release.sh  pyproject.toml
.github/workflows/: ci.yml  commit-check.yml  markdown.yml
config/: sample_portfolio.yaml
docs/assets/: demo.tape
docs/import/: example_ibkr_positions.csv  interactive-brokers.md
scripts/: check_unicode_symbols.sh  ci-check  make_release.sh
src/stonks_cli/: __init__.py  _columns.py  _row_model.py  app.py  app_actions.py  backtest.py  backtest_detail.py  chart.py  chat.py  crypto_fetcher.py  detail.py  doctor.py  dto.py  exchanges.py  fetcher.py  forms.py  helpers.py  ibkr_importer.py  log.py  logviewer.py  main.py  market.py  market_session.py  messages.py  models.py  news_fetcher.py  portfolio_table.py  show.py  show_detail.py  show_news.py  stock_detail.py  storage.py  table_rows.py
src/stonks_cli/data/: chat_prompt.txt  coingecko_coins.json  sample_portfolio.yaml
src/stonks_cli/widgets/: __init__.py  news_feed.py  portfolio_table.py
tests/: conftest.py  test_app.py  test_app_actions.py  test_backtest.py  test_backtest_detail.py  test_chart.py  test_chat.py  test_cli.py  test_crypto_fetcher.py  test_detail.py  test_exchanges.py  test_fetcher.py  test_forms.py  test_helpers.py  test_ibkr_importer.py  test_log.py  test_logviewer.py  test_market.py  test_models.py  test_news_fetcher.py  test_show_detail.py  test_show_news.py  test_storage.py  test_version.py
