[tool.poetry]
name = "stonks-cli"
version = "0.2.0"
description = "CLI tool for tracking investment portfolio"
authors = ["Igor Opaniuk <igor.opaniuk@gmail.com>"]
readme = "README.md"
packages = [{include = "stonks_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"
pyyaml = "^6.0"
yfinance = "^1.2.0"
textual = "^8.1.0"
rich = "^14.0"
exchange-calendars = "^4.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^1.3.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.19.0,<2.0.0"
ruff = ">=0.14.8,<0.15.0"
types-PyYAML = "^6.0"
pre-commit = "^4.5.0"
pytest-cov = "^7.0.0"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry.scripts]
stonks = "stonks_cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["stonks_cli"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
plugins = []
files = ["src"]
ignore_missing_imports = true
show_error_codes = true
pretty = true
strict_optional = true
